src/main/fabric8/route.yml
kind: Route
apiVersion: v1
#metadata:
#  name: sampleapp
#  labels:
#    application: sampleapp
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: sampleapp
